# Falling-Object-Detection

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
cmake/: toolchain.cmake
src/: main.cpp  utils.hpp
src/bgsegm/: vibe.cpp  vibe.hpp  vibe_sequential.cpp  vibe_sequential.hpp
src/codec/: decoder.cpp  decoder.hpp  video_reader.cpp  video_reader.hpp
src/tracker/: gravity_projector.cpp  gravity_projector.hpp  kalman_filter.cpp  kalman_filter.hpp  kalman_filter_instantiation.hpp  lap_solver.cpp  lap_solver.hpp  tracked_bbox.cpp  tracked_bbox.hpp  tracker.cpp  tracker.hpp  trajectory.cpp  trajectory.hpp
test/: CMakeLists.txt  kalman_demo.py  kalman_filter_test.cpp  kalman_filter_test_visualization.py  lap_solver_test.cpp  sort_tracker_test.cpp  tracker_test_gen_data.py  vibe_test.cpp  video_reader_test.cpp
